tests/type_check/fail/mod.rs
use std::include_str;

use super::type_check;
use pijama::ty::{Ty, TyError};
use pijama::LangError;

mod arithmetic;
mod comparison;
mod conditionals;
mod functions;
mod logic;
mod variables;
